font path change

--- a/health/templates/user_navigation.html
+++ b/health/templates/user_navigation.html
@@ -22,7 +22,7 @@
 	<!-- Fontawesome CSS -->
 	<link rel="stylesheet" href="{% static 'user/plugins/fontawesome/css/fontawesome.min.css' %}">
 	<link rel="stylesheet" href="{% static 'user/plugins/fontawesome/css/all.min.css' %}">
-	<link href="http://fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
+	<link href="//fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
 
 
 	<!-- Main CSS -->
