--- a/health/templates/patient/health_card.html
+++ b/health/templates/patient/health_card.html
@@ -5,7 +5,7 @@
     <title>Health Card</title>
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="http://fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
+<link href="//fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
 <style>
     *{
     margin: 0;
