--- a/health/templates/user_navigation.html
+++ b/health/templates/user_navigation.html
@@ -60,7 +60,7 @@
 				<div class="main-menu-wrapper">
 					<div class="menu-header">
 						<a href="index-2.html" class="menu-logo">
-							<img src="{% static 'user/img/logo.png' %}" class="img-fluid" alt="Logo">
+							<img src="{% static 'user/img/ShubhamkarotiL1.png' %}" class="img-fluid" alt="Logo">
 						</a>
 						<a id="menu_close" class="menu-close" href="javascript:void(0);">
 							<i class="fas fa-times"></i>
